--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,16 @@ body {
   margin: 0;
   min-height: 100%;
 }
+
+#color-box {
+  position: absolute;
+  top: 13rem;
+  left: 40rem;
+  height: 4.5rem;
+  width: 4.5rem;
+}
+
+#container {
+  display: flex;
+  flex-direction: column;
+}
